Fixed issues on safari for GO and scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -227,7 +227,13 @@ h1 {
     .go {
         font-size: 1.3rem;
         height: 1.8rem;
-        margin-left: -42px;
+        position: relative;
+        right: 0;
+    }
+
+    .go:hover {
+        background-color: #212426;
+        color: lightsteelblue;
     }
 
     .movie {
@@ -270,7 +276,13 @@ h1 {
     .go {
         font-size: 0.9rem;
         height: 1.1rem;
-        margin-left: -34px;
+        position: relative;
+        right: 0;
+    }
+
+    .go:hover {
+        background-color: #212426;
+        color: lightsteelblue;
     }
 
     .movie {
@@ -284,6 +296,7 @@ h1 {
     .preSelectedSearch{
         overflow-x: scroll;
         white-space: nowrap;
+        padding-left: 20%;
     }
 
     .option {
